--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -231,8 +231,7 @@ button.dropdown-toggle::after {
       <!-- typeahead لديك (بحث حسابات/عناصر) -->
       <div id="typeaheadPanel" class="typeahead d-none"></div>
 
-  <<div class="actions d-flex align-items-center gap-2 ms-auto">
-
+  <div class="actions d-flex align-items-center gap-2 ms-auto">
   {# رسائل - ثابت للجميع (مسج أيقونة) #}
   <a href="/messages" class="btn btn-ghost btn-sm" title="الرسائل">
     <img class="icon-img" src="/static/img/msg.png" alt="Messages" style="width:24px;height:24px">
